add data transformation logic to clean and structure API response

--- a/global_air_quality.ipynb
+++ b/global_air_quality.ipynb
@@ -1,16 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ce6064e3",
+   "metadata": {},
+   "source": [
+    "Extracting IQAir API "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "17910347",
+   "execution_count": 4,
+   "id": "63a71a57",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'status': 'success', 'data': {'city': 'Delhi', 'state': 'Delhi', 'country': 'India', 'location': {'type': 'Point', 'coordinates': [77.1167, 28.6683]}, 'current': {'pollution': {'ts': '2025-06-08T08:00:00.000Z', 'aqius': 151, 'mainus': 'p2', 'aqicn': 112, 'maincn': 'p1'}, 'weather': {'ts': '2025-06-08T08:00:00.000Z', 'ic': '50d', 'hu': 24, 'pr': 1003, 'tp': 41, 'wd': 0, 'ws': 1.03}}}}\n"
+      "{'status': 'success', 'data': {'city': 'Delhi', 'state': 'Delhi', 'country': 'India', 'location': {'type': 'Point', 'coordinates': [77.1167, 28.6683]}, 'current': {'pollution': {'ts': '2025-06-08T10:00:00.000Z', 'aqius': 152, 'mainus': 'p2', 'aqicn': 120, 'maincn': 'p1'}, 'weather': {'ts': '2025-06-08T10:00:00.000Z', 'ic': '50d', 'hu': 20, 'pr': 1001, 'tp': 43, 'wd': 320, 'ws': 4.12}}}}\n"
      ]
     }
    ],
@@ -24,17 +32,58 @@
     "    \"key\": \"86a4d7ad-f925-44cc-a3a9-21e07f3f3041\"\n",
     "}\n",
     "data = requests.get(url, params=params).json()\n",
-    "print(data)\n",
-    "\n"
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bd52062",
+   "metadata": {},
+   "source": [
+    "Cleaning and transform IQAir API "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fb16572f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Cleaned data:\n",
+      "{'city': 'Delhi', 'state': 'Delhi', 'country': 'India', 'aqi': 151, 'pm_source': 'p2', 'timestamp': '2025-06-08T08:00:00.000Z', 'temperature': 41, 'humidity': 24, 'latitude': 28.6683, 'longitude': 77.1167}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "if data[\"status\"] == \"success\":\n",
+    "    pollution = data['data']['current']['pollution']\n",
+    "    weather = data['data']['current']['weather']\n",
+    "    coords = data['data']['location']['coordinates']\n",
+    "\n",
+    "    transformed = {\n",
+    "        \"city\": data[\"data\"][\"city\"],\n",
+    "        \"state\": data[\"data\"][\"state\"],\n",
+    "        \"country\": data[\"data\"][\"country\"],\n",
+    "        \"aqi\": pollution[\"aqius\"],\n",
+    "        \"pm_source\": pollution[\"mainus\"],\n",
+    "        \"timestamp\": pollution[\"ts\"],\n",
+    "        \"temperature\": weather[\"tp\"],\n",
+    "        \"humidity\": weather[\"hu\"],\n",
+    "        \"latitude\": coords[1],\n",
+    "        \"longitude\": coords[0]\n",
+    "    }\n",
+    "\n",
+    "    print(\"✅ Cleaned data:\")\n",
+    "    print(transformed)\n",
+    "\n",
+    "else:\n",
+    "    print(\"❌ Failed to fetch data:\", data[\"data\"][\"message\"])\n"
+   ]
   }
  ],
  "metadata": {
