Created Workflow Orchestration - Automated ETL workflow

--- a/global_air_quality.ipynb
+++ b/global_air_quality.ipynb
@@ -5,16 +5,16 @@
    "id": "a18ebbee",
    "metadata": {},
    "source": [
-    "# 🌍 Global Air Quality Tracker\n",
+    "# 🌍 Germany's Air Quality Tracker\n",
     "\n",
-    "This project uses the IQAir API to fetch real-time air quality data from global cities, stores the data in MongoDB, and prepares it for visualization in Power BI or Tableau.\n",
+    "This project uses the IQAir API to fetch real-time air quality data from german cities, stores the data in MongoDB, and prepares it for visualization in Tableau.\n",
     "\n",
     "**ETL Flow:**\n",
     "\n",
     "1. Extract air quality data from IQAir API\n",
     "2. Transform & normalize the data\n",
     "3. Load into MongoDB\n",
-    "4. Visualize on Power BI or Tableau Public"
+    "4. Visualization on Tableau Public"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "id": "c081af36",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "id": "d6be4e30",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "id": "63a71a57",
    "metadata": {},
    "outputs": [],
@@ -85,12 +85,19 @@
    "execution_count": null,
    "id": "aac37995",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 {\"status\":\"success\",\"data\":[{\"state\":\"Baden-Wuerttemberg\"},{\"state\":\"Bavaria\"},{\"state\":\"Berlin\"},{\"state\":\"Brandenburg\"},{\"state\":\"Bremen\"},{\"state\":\"Hamburg\"},{\"state\":\"Hessen\"},{\"state\":\"Lower Saxony\"},{\"state\":\"Mecklenburg-Vorpommern\"},{\"state\":\"Nordrhein-Westfalen\"},{\"state\":\"Rheinland-Pfalz\"},{\"state\":\"Saarland\"},{\"state\":\"Saxony\"},{\"state\":\"Saxony-Anhalt\"},{\"state\":\"Schleswig-Holstein\"},{\"state\":\"Thuringia\"}]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Get all states in Germany\n",
     "states_url = f\"{BASE_URL}/v2/states?country={country}&key={API_KEY}\"\n",
     "states_response = requests.get(states_url)\n",
-    "print(states_response)\n",
     "states_data = states_response.json()\n",
     "\n",
     "states = [state['state'] for state in states_data['data']]"
